// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Pagination API should navigate backward using before cursor for animals 1`] = `
{
  "data": [
    {
      "id": "26",
      "name": "Catfish",
    },
    {
      "id": "6",
      "name": "Catfish",
    },
  ],
  "pagination": {
    "endCursor": "eyJpZCI6Niwib3JkZXJGaWVsZCI6Im5hbWUiLCJvcmRlclZhbHVlIjoiQ2F0ZmlzaCIsImRpcmVjdGlvbiI6IkRFU0MifQ==",
    "hasNext": true,
    "hasPrevious": true,
    "startCursor": "eyJpZCI6MjYsIm9yZGVyRmllbGQiOiJuYW1lIiwib3JkZXJWYWx1ZSI6IkNhdGZpc2giLCJkaXJlY3Rpb24iOiJERVNDIn0=",
    "totalCount": 31,
  },
}
`;

exports[`Pagination API should navigate backward using before cursor for countries 1`] = `
{
  "data": [
    {
      "id": "4",
      "name": "United States",
    },
    {
      "id": "1",
      "name": "Nigeria",
    },
  ],
  "pagination": {
    "endCursor": "eyJpZCI6MSwib3JkZXJGaWVsZCI6Im5hbWUiLCJvcmRlclZhbHVlIjoiTmlnZXJpYSIsImRpcmVjdGlvbiI6IkRFU0MifQ==",
    "hasNext": true,
    "hasPrevious": false,
    "startCursor": "eyJpZCI6NCwib3JkZXJGaWVsZCI6Im5hbWUiLCJvcmRlclZhbHVlIjoiVW5pdGVkIFN0YXRlcyIsImRpcmVjdGlvbiI6IkRFU0MifQ==",
    "totalCount": 6,
  },
}
`;

exports[`Pagination API should navigate forward using after cursor for animals 1`] = `
{
  "data": [
    {
      "id": "10",
      "name": "Bald Eagle",
    },
    {
      "id": "9",
      "name": "Bat",
    },
  ],
  "pagination": {
    "endCursor": "eyJpZCI6OSwib3JkZXJGaWVsZCI6Im5hbWUiLCJvcmRlclZhbHVlIjoiQmF0IiwiZGlyZWN0aW9uIjoiQVNDIn0=",
    "hasNext": true,
    "hasPrevious": true,
    "startCursor": "eyJpZCI6MTAsIm9yZGVyRmllbGQiOiJuYW1lIiwib3JkZXJWYWx1ZSI6IkJhbGQgRWFnbGUiLCJkaXJlY3Rpb24iOiJBU0MifQ==",
    "totalCount": 31,
  },
}
`;

exports[`Pagination API should navigate forward using after cursor for countries 1`] = `
{
  "data": [
    {
      "id": "2",
      "name": "China",
    },
    {
      "id": "3",
      "name": "France",
    },
  ],
  "pagination": {
    "endCursor": "eyJpZCI6Mywib3JkZXJGaWVsZCI6Im5hbWUiLCJvcmRlclZhbHVlIjoiRnJhbmNlIiwiZGlyZWN0aW9uIjoiQVNDIn0=",
    "hasNext": true,
    "hasPrevious": true,
    "startCursor": "eyJpZCI6Miwib3JkZXJGaWVsZCI6Im5hbWUiLCJvcmRlclZhbHVlIjoiQ2hpbmEiLCJkaXJlY3Rpb24iOiJBU0MifQ==",
    "totalCount": 6,
  },
}
`;

exports[`Pagination API should paginate animals (first page) 1`] = `
{
  "data": [
    {
      "id": "1",
      "name": "African Elephant",
    },
    {
      "id": "19",
      "name": "Axolotl",
    },
  ],
  "pagination": {
    "endCursor": "eyJpZCI6MTksIm9yZGVyRmllbGQiOiJuYW1lIiwib3JkZXJWYWx1ZSI6IkF4b2xvdGwiLCJkaXJlY3Rpb24iOiJBU0MifQ==",
    "hasNext": true,
    "hasPrevious": false,
    "startCursor": "eyJpZCI6MSwib3JkZXJGaWVsZCI6Im5hbWUiLCJvcmRlclZhbHVlIjoiQWZyaWNhbiBFbGVwaGFudCIsImRpcmVjdGlvbiI6IkFTQyJ9",
    "totalCount": 31,
  },
}
`;

exports[`Pagination API should paginate countries (first page) 1`] = `
{
  "data": [
    {
      "id": "6",
      "name": "Australia",
    },
    {
      "id": "5",
      "name": "Brazil",
    },
  ],
  "pagination": {
    "endCursor": "eyJpZCI6NSwib3JkZXJGaWVsZCI6Im5hbWUiLCJvcmRlclZhbHVlIjoiQnJhemlsIiwiZGlyZWN0aW9uIjoiQVNDIn0=",
    "hasNext": true,
    "hasPrevious": false,
    "startCursor": "eyJpZCI6Niwib3JkZXJGaWVsZCI6Im5hbWUiLCJvcmRlclZhbHVlIjoiQXVzdHJhbGlhIiwiZGlyZWN0aW9uIjoiQVNDIn0=",
    "totalCount": 6,
  },
}
`;

exports[`Pagination API should return empty array for empty result 1`] = `
{
  "data": [],
  "pagination": {
    "endCursor": null,
    "hasNext": false,
    "hasPrevious": false,
    "startCursor": null,
    "totalCount": 0,
  },
}
`;
